--- a/src/popup/scripts/components/App.module.css
+++ b/src/popup/scripts/components/App.module.css
@@ -1,3 +1,17 @@
 .container {
-    background-color: aquamarine;
+    width: 300px;
+    max-height: 450px;
+}
+
+.header {
+    color: #164ca7;
+    font-size: 18px;
+    letter-spacing: 1px;
+    text-align: center;
+}
+
+.menuButton {
+    height: 60px;
+    width: 210px;
+    margin: 15px auto
 }
